make google colab ready

--- a/2019_HS_Data_Access/Data_Access_InfluxDB.ipynb
+++ b/2019_HS_Data_Access/Data_Access_InfluxDB.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First we need to import the necessary python modules (we assume that the necessary OS dependencies are already installed). "
+    "Check where the notebook runs. Based on this we need to set some variables differently (e.g. we cannot access FHNW servers from google colab)."
    ]
   },
   {
@@ -22,9 +22,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "in_colab = 'google.colab' in sys.modules"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First we need to import the necessary python modules (we assume that the necessary OS dependencies are already installed). "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# install the modules on the OS (uncomment if needed)\n",
     "#!pip install pandas\n",
-    "#!pip install influxdb\n",
+    "if in_colab:\n",
+    "    !pip install influxdb\n",
     "\n",
     "# import the modules\n",
     "import pandas as pd\n",
@@ -40,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -64,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +329,8 @@
     }
    ],
    "source": [
-    "#!pip install jsonpath-ng\n",
+    "if in_colab:\n",
+    "    !pip install jsonpath-ng\n",
     "\n",
     "# import the modules\n",
     "import requests\n",
@@ -325,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
