--- a/2019_HS_Data_Access/Data_Access_PostgreSQL.ipynb
+++ b/2019_HS_Data_Access/Data_Access_PostgreSQL.ipynb
@@ -13,12 +13,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First we need to import the necessary python modules (we assume that the necessary OS dependencies are already installed). "
+    "Check where the notebook runs. Based on this we need to set some variables differently (e.g. we cannot access FHNW servers from google colab)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "in_colab = 'google.colab' in sys.modules"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First we need to import the necessary python modules (we assume that the necessary OS dependencies are already installed). "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -55,7 +72,10 @@
    ],
    "source": [
     "# define the database connection string \n",
-    "DB_HOST='server2053.cs.technik.fhnw.ch'\n",
+    "if in_colab:\n",
+    "    DB_HOST='86.119.36.94'\n",
+    "else:\n",
+    "    DB_HOST='server2053.cs.technik.fhnw.ch'\n",
     "DB_PORT = '5432'\n",
     "DB_DBNAME = 'bank_db' # or 'warenkorb_db'\n",
     "DB_USERNAME = 'db_user' \n",
@@ -84,20 +104,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(psycopg2.OperationalError) could not translate host name \"server2053.cs.technik.fhnw.ch\" to address: Temporary failure in name resolution\n",
-      "\n",
-      "(Background on this error at: http://sqlalche.me/e/e3q8)\n",
-      "Connection info needed in SQLAlchemy format, example:\n",
-      "               postgresql://username:password@hostname/dbname\n",
-      "               or an existing connection: dict_keys([])\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'Connected: db_user@bank_db'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -109,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -28136,7 +28154,7 @@
        " ...]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -28150,7 +28168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -32681,7 +32699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -32835,7 +32853,7 @@
        " ('bank_db', 'public', 'trans', 'BASE TABLE', None, None, None, None, None, 'YES', 'NO', None)]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -32848,7 +32866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -33102,7 +33120,7 @@
        " ('bank_db', 'public', 'account', 'date', 4, None, 'YES', 'date', None, None, None, None, None, 0, None, None, None, None, None, None, None, None, None, None, None, 'bank_db', 'pg_catalog', 'date', None, None, None, None, '4', 'NO', 'NO', None, None, None, None, None, 'NO', 'NEVER', None, 'YES')]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33116,7 +33134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -33154,7 +33172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -33644,7 +33662,7 @@
        "[4500 rows x 3 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33678,7 +33696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -36321,7 +36339,13 @@
       "(1939, 6, 'POPLATEK TYDNE', datetime.date(1996, 4, 19))\n",
       "(5726, 17, 'POPLATEK PO OBRATU', datetime.date(1996, 4, 19))\n",
       "(3998, 2, 'POPLATEK MESICNE', datetime.date(1996, 4, 20))\n",
-      "(3021, 10, 'POPLATEK MESICNE', datetime.date(1996, 4, 20))\n",
+      "(3021, 10, 'POPLATEK MESICNE', datetime.date(1996, 4, 20))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "(1607, 71, 'POPLATEK MESICNE', datetime.date(1996, 4, 20))\n",
       "(1733, 18, 'POPLATEK MESICNE', datetime.date(1996, 4, 20))\n",
       "(2474, 33, 'POPLATEK MESICNE', datetime.date(1996, 4, 20))\n",
@@ -36570,13 +36594,7 @@
       "(3089, 12, 'POPLATEK TYDNE', datetime.date(1996, 7, 2))\n",
       "(7181, 77, 'POPLATEK PO OBRATU', datetime.date(1996, 7, 2))\n",
       "(1241, 53, 'POPLATEK MESICNE', datetime.date(1996, 7, 2))\n",
-      "(1004, 70, 'POPLATEK MESICNE', datetime.date(1996, 7, 2))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "(1004, 70, 'POPLATEK MESICNE', datetime.date(1996, 7, 2))\n",
       "(2344, 13, 'POPLATEK MESICNE', datetime.date(1996, 7, 2))\n",
       "(2530, 74, 'POPLATEK MESICNE', datetime.date(1996, 7, 2))\n",
       "(170, 59, 'POPLATEK MESICNE', datetime.date(1996, 7, 2))\n",
@@ -38920,7 +38938,13 @@
       "(1875, 44, 'POPLATEK MESICNE', datetime.date(1993, 8, 21))\n",
       "(8212, 52, 'POPLATEK PO OBRATU', datetime.date(1993, 8, 21))\n",
       "(3477, 71, 'POPLATEK MESICNE', datetime.date(1993, 8, 22))\n",
-      "(1513, 30, 'POPLATEK MESICNE', datetime.date(1993, 8, 23))\n",
+      "(1513, 30, 'POPLATEK MESICNE', datetime.date(1993, 8, 23))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "(3053, 11, 'POPLATEK MESICNE', datetime.date(1993, 8, 23))\n",
       "(1057, 13, 'POPLATEK MESICNE', datetime.date(1993, 8, 23))\n",
       "(6030, 47, 'POPLATEK MESICNE', datetime.date(1993, 8, 24))\n",
@@ -39168,13 +39192,7 @@
       "(3548, 23, 'POPLATEK MESICNE', datetime.date(1993, 11, 11))\n",
       "(5984, 11, 'POPLATEK MESICNE', datetime.date(1993, 11, 11))\n",
       "(3091, 3, 'POPLATEK MESICNE', datetime.date(1993, 11, 11))\n",
-      "(626, 72, 'POPLATEK MESICNE', datetime.date(1993, 11, 11))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "(626, 72, 'POPLATEK MESICNE', datetime.date(1993, 11, 11))\n",
       "(998, 47, 'POPLATEK MESICNE', datetime.date(1993, 11, 11))\n",
       "(3326, 5, 'POPLATEK MESICNE', datetime.date(1993, 11, 11))\n",
       "(2457, 76, 'POPLATEK MESICNE', datetime.date(1993, 11, 11))\n",
@@ -41590,7 +41608,13 @@
       "(1899, 26, 'POPLATEK MESICNE', datetime.date(1996, 11, 5))\n",
       "(91, 17, 'POPLATEK MESICNE', datetime.date(1996, 11, 6))\n",
       "(4753, 1, 'POPLATEK MESICNE', datetime.date(1996, 11, 7))\n",
-      "(9528, 19, 'POPLATEK MESICNE', datetime.date(1996, 11, 7))\n",
+      "(9528, 19, 'POPLATEK MESICNE', datetime.date(1996, 11, 7))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "(9333, 36, 'POPLATEK MESICNE', datetime.date(1996, 11, 8))\n",
       "(2107, 70, 'POPLATEK MESICNE', datetime.date(1996, 11, 9))\n",
       "(3224, 55, 'POPLATEK MESICNE', datetime.date(1996, 11, 10))\n",
@@ -41731,13 +41755,7 @@
       "(2873, 70, 'POPLATEK MESICNE', datetime.date(1996, 12, 13))\n",
       "(3962, 54, 'POPLATEK MESICNE', datetime.date(1996, 12, 13))\n",
       "(2376, 71, 'POPLATEK MESICNE', datetime.date(1996, 12, 14))\n",
-      "(2995, 51, 'POPLATEK MESICNE', datetime.date(1996, 12, 14))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "(2995, 51, 'POPLATEK MESICNE', datetime.date(1996, 12, 14))\n",
       "(3984, 51, 'POPLATEK MESICNE', datetime.date(1996, 12, 14))\n",
       "(659, 63, 'POPLATEK MESICNE', datetime.date(1996, 12, 14))\n",
       "(3137, 39, 'POPLATEK MESICNE', datetime.date(1996, 12, 15))\n",
