Use different host.

--- a/2019_HS_Data_Access/Data_Access_PostgreSQL_R.ipynb
+++ b/2019_HS_Data_Access/Data_Access_PostgreSQL_R.ipynb
@@ -52,7 +52,7 @@
    "outputs": [],
    "source": [
     "# define the database connection string\n",
-    "DB_HOST='server2053.cs.technik.fhnw.ch' \n",
+    "DB_HOST='86.119.36.94' \n",
     "DB_PORT = '5432'\n",
     "DB_DBNAME = 'bank_db' # or 'warenkorb_db'\n",
     "DB_USERNAME = 'db_user' \n",
