--- a/2019_HS_Data_Access/ER_Model_Creation.ipynb
+++ b/2019_HS_Data_Access/ER_Model_Creation.ipynb
@@ -4,15 +4,23 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "E: Could not open lock file /var/lib/dpkg/lock-frontend - open (13: Permission denied)\n",
+      "E: Unable to acquire the dpkg frontend lock (/var/lib/dpkg/lock-frontend), are you root?\n",
+      "Requirement already satisfied: eralchemy in /opt/conda/lib/python3.7/site-packages (1.2.10)\n",
+      "Requirement already satisfied: SQLAlchemy in /opt/conda/lib/python3.7/site-packages (from eralchemy) (1.3.3)\n",
+      "Requirement already satisfied: pygraphviz in /opt/conda/lib/python3.7/site-packages (from eralchemy) (1.5)\n"
+     ]
+    }
+   ],
    "source": [
-    "import sys\n",
-    "in_colab = 'google.colab' in sys.modules\n",
-    "\n",
-    "if in_colab:\n",
-    "    # install necessary dependencies\n",
-    "    !apt-get install graphviz graphviz-dev\n",
-    "    !pip install eralchemy"
+    "# install necessary dependencies\n",
+    "!apt-get install graphviz graphviz-dev\n",
+    "!pip install eralchemy"
    ]
   },
   {
@@ -33,13 +41,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if in_colab:\n",
-    "    db_host = '86.119.36.94'\n",
-    "else:\n",
-    "    db_host = 'server2053.cs.technik.fhnw.ch' \n",
-    "db_port = \"5432\"\n",
-    "db_user = \"db_user\" \n",
-    "db_password = \"db_user_pw\""
+    "DB_HOST='server2053.cs.technik.fhnw.ch'\n",
+    "DB_PORT = 5432\n",
+    "DB_DBNAME = 'bank_db'\n",
+    "DB_USERNAME = 'db_user' \n",
+    "DB_PASSWORD = 'db_user_pw'\n",
+    "\n",
+    "import socket\n",
+    "try:\n",
+    "    sock = socket.create_connection((DB_HOST, DB_PORT), timeout=1)\n",
+    "    sock.shutdown(socket.SHUT_RDWR)\n",
+    "    sock.close()\n",
+    "except socket.timeout as err:\n",
+    "    DB_HOST = '86.119.36.94'\n",
+    "except socket.error as err:\n",
+    "    DB_HOST = '86.119.36.94'"
    ]
   },
   {
@@ -51,7 +67,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "postgresql://db_user:db_user_pw@server2053.cs.technik.fhnw.ch:5432/bank_db\n",
+      "postgresql://db_user:db_user_pw@86.119.36.94:5432/bank_db\n",
       "/home/jovyan/bank_db.png\n"
      ]
     },
@@ -68,10 +84,10 @@
     }
    ],
    "source": [
-    "db_name = \"bank_db\"\n",
-    "db_str = 'postgresql://{username}:{password}@{host}:{port}/{dbname}'.format(username=db_user,password=db_password,host=db_host,port=db_port,dbname=db_name)\n",
+    "DB_DBNAME = \"bank_db\"\n",
+    "db_str = 'postgresql://{username}:{password}@{host}:{port}/{dbname}'.format(username=DB_USERNAME,password=DB_PASSWORD,host=DB_HOST,port=DB_PORT,dbname=DB_DBNAME)\n",
     "print(db_str)\n",
-    "file = os.path.join(Path.home(), db_name + '.png')\n",
+    "file = os.path.join(Path.home(), DB_DBNAME + '.png')\n",
     "files = [file]\n",
     "print(file)\n",
     "render_er(db_str, file)\n",
@@ -88,7 +104,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "postgresql://db_user:db_user_pw@server2053.cs.technik.fhnw.ch:5432/warenkorb_db\n",
+      "postgresql://db_user:db_user_pw@86.119.36.94:5432/warenkorb_db\n",
       "/home/jovyan/warenkorb_db.png\n"
      ]
     },
@@ -105,10 +121,10 @@
     }
    ],
    "source": [
-    "db_name = \"warenkorb_db\"\n",
-    "db_str = 'postgresql://{username}:{password}@{host}:{port}/{dbname}'.format(username=db_user,password=db_password,host=db_host,port=db_port,dbname=db_name)\n",
+    "DB_DBNAME = \"warenkorb_db\"\n",
+    "db_str = 'postgresql://{username}:{password}@{host}:{port}/{dbname}'.format(username=DB_USERNAME,password=DB_PASSWORD,host=DB_HOST,port=DB_PORT,dbname=DB_DBNAME)\n",
     "print(db_str)\n",
-    "file = os.path.join(Path.home(), db_name + '.png')\n",
+    "file = os.path.join(Path.home(), DB_DBNAME + '.png')\n",
     "files.append(file)\n",
     "print(file)\n",
     "render_er(db_str, file)\n",
