--- a/2019_HS_Data_Access/Data_Access_InfluxDB_R.ipynb
+++ b/2019_HS_Data_Access/Data_Access_InfluxDB_R.ipynb
@@ -38,10 +38,11 @@
     }
    ],
    "source": [
-    "install.packages(\"httr\")\n",
-    "#install.packages(\"jsonlite\")\n",
-    "install.packages(\"rjson\")\n",
-    "install.packages(\"stringr\")\n",
+    "# activate install if needed\n",
+    "#install.packages(\"httr\")\n",
+    "#install.packages(\"rjson\")\n",
+    "#install.packages(\"stringr\")\n",
+    "\n",
     "#Require the package so you can use it\n",
     "require(\"httr\")\n",
     "#require(\"jsonlite\")\n",
