--- a/2019_HS_Data_Access/Data_Access_PostgreSQL_R.ipynb
+++ b/2019_HS_Data_Access/Data_Access_PostgreSQL_R.ipynb
@@ -33,7 +33,8 @@
     }
    ],
    "source": [
-    "install.packages(\"RPostgreSQL\")\n",
+    "# activate install if needed\n",
+    "#install.packages(\"RPostgreSQL\")\n",
     "\n",
     "require(\"RPostgreSQL\")"
    ]
