--- a/2019_HS_Data_Access/Data_Access_InfluxDB_R.ipynb
+++ b/2019_HS_Data_Access/Data_Access_InfluxDB_R.ipynb
@@ -57,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DB_HOST <- '86.119.36.94' \n",
+    "DB_HOST <- 'address_or_ip_of_your_rasperry_pi' \n",
     "DB_PORT <- 8086\n",
     "DB_DBNAME <- 'meteorology'\n",
     "stations <- list('mythenquai', 'tiefenbrunnen')\n",
@@ -80,7 +80,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "http://86.119.36.94:8086/query?db=meteorology\n"
+      "http://address_or_ip_of_your_rasperry_pi:8086/query?db=meteorology\n"
      ]
     }
    ],
