--- a/2019_HS_Data_Access/Data_Access_InfluxDB.ipynb
+++ b/2019_HS_Data_Access/Data_Access_InfluxDB.ipynb
@@ -25,15 +25,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: influxdb in /opt/conda/lib/python3.7/site-packages (5.2.2)\n",
-      "Requirement already satisfied: pytz in /opt/conda/lib/python3.7/site-packages (from influxdb) (2019.1)\n",
-      "Requirement already satisfied: python-dateutil>=2.6.0 in /opt/conda/lib/python3.7/site-packages (from influxdb) (2.8.0)\n",
-      "Requirement already satisfied: six>=1.10.0 in /opt/conda/lib/python3.7/site-packages (from influxdb) (1.12.0)\n",
-      "Requirement already satisfied: requests>=2.17.0 in /opt/conda/lib/python3.7/site-packages (from influxdb) (2.21.0)\n",
-      "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /opt/conda/lib/python3.7/site-packages (from requests>=2.17.0->influxdb) (3.0.4)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /opt/conda/lib/python3.7/site-packages (from requests>=2.17.0->influxdb) (2019.3.9)\n",
-      "Requirement already satisfied: urllib3<1.25,>=1.21.1 in /opt/conda/lib/python3.7/site-packages (from requests>=2.17.0->influxdb) (1.24.2)\n",
-      "Requirement already satisfied: idna<2.9,>=2.5 in /opt/conda/lib/python3.7/site-packages (from requests>=2.17.0->influxdb) (2.8)\n"
+      "Requirement already satisfied: influxdb in /opt/conda/lib/python3.7/site-packages (5.2.2)\r\n",
+      "Requirement already satisfied: requests>=2.17.0 in /opt/conda/lib/python3.7/site-packages (from influxdb) (2.21.0)\r\n",
+      "Requirement already satisfied: pytz in /opt/conda/lib/python3.7/site-packages (from influxdb) (2019.1)\r\n",
+      "Requirement already satisfied: six>=1.10.0 in /opt/conda/lib/python3.7/site-packages (from influxdb) (1.12.0)\r\n",
+      "Requirement already satisfied: python-dateutil>=2.6.0 in /opt/conda/lib/python3.7/site-packages (from influxdb) (2.8.0)\r\n",
+      "Requirement already satisfied: idna<2.9,>=2.5 in /opt/conda/lib/python3.7/site-packages (from requests>=2.17.0->influxdb) (2.8)\r\n",
+      "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /opt/conda/lib/python3.7/site-packages (from requests>=2.17.0->influxdb) (3.0.4)\r\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /opt/conda/lib/python3.7/site-packages (from requests>=2.17.0->influxdb) (2019.3.9)\r\n",
+      "Requirement already satisfied: urllib3<1.25,>=1.21.1 in /opt/conda/lib/python3.7/site-packages (from requests>=2.17.0->influxdb) (1.24.2)\r\n"
      ]
     }
    ],
@@ -64,13 +64,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "86.119.36.94:8086\n"
+      "address_or_ip_of_your_rasperry_pi:8086\n"
      ]
     }
    ],
    "source": [
     "# define the database connection string\n",
-    "DB_HOST = '86.119.36.94' \n",
+    "DB_HOST = 'address_or_ip_of_your_rasperry_pi' \n",
     "DB_PORT = 8086\n",
     "DB_DBNAME = 'meteorology'\n",
     "stations = ['mythenquai', 'tiefenbrunnen']\n",
