--- a/2019_HS_Data_Access/Data_Access_PostgreSQL_R.ipynb
+++ b/2019_HS_Data_Access/Data_Access_PostgreSQL_R.ipynb
@@ -18,13 +18,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "Updating HTML index of packages in '.Library'\n",
+      "Making 'packages.html' ... done\n",
       "Loading required package: RPostgreSQL\n",
       "Loading required package: DBI\n"
      ]
@@ -32,7 +34,7 @@
    ],
    "source": [
     "# activate install if needed\n",
-    "#install.packages(\"RPostgreSQL\")\n",
+    "install.packages(\"RPostgreSQL\")\n",
     "\n",
     "require(\"RPostgreSQL\")"
    ]
@@ -46,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
