--- a/2019_HS_Data_Access/Data_Access_PostgreSQL_R_Extended.ipynb
+++ b/2019_HS_Data_Access/Data_Access_PostgreSQL_R_Extended.ipynb
@@ -34,7 +34,7 @@
    ],
    "source": [
     "# activate install if needed\n",
-    "install.packages(\"RPostgreSQL\")\n",
+    "#install.packages(\"RPostgreSQL\")\n",
     "\n",
     "require(\"RPostgreSQL\")"
    ]
